@@ -60,6 +60,7 @@ class Config(object):
         modindex_common_prefix = ([], 'html'),
         rst_epilog = (None, 'env'),
         trim_doctest_flags = (True, 'env'),
+        needs_sphinx = (None, None),
 
         # HTML options
         html_theme = ('default', 'html'),
